# acceler8

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
market_research_assist/: __init__.py  app.py  core.py  features.py  frontend.py  plots.py
market_research_assist/data_clean/: reeddit_clean.py
market_research_assist/data_gather/: social_fetcher.py
market_research_assist/modeling/: twitter_RoBERTA.py  world_cloud.py
notebooks/: data_clean.ipynb  sentiment_analysis.ipynb
